--- a/index.html
+++ b/index.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Reserve&Eat</title>
-  <link rel="shortcut icon" src="ico.png" type="image/png">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <style>
-  body {
-      position: relative;
-      background-color: #FFB6C1;
-      
-  }
-.den{
-  background-color: #FFB6C1
-}
-.g{
-  background-color: #5DADE2;
-}
-
-.center-img {
-  text-align: center;
-  margin-top: 20px;
-}
-#lol{margin-left: 200px;
-      margin-right: 200px;}
-
-  </style>
-</head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-  <div class="den">
-      <div class="container-fluid">
-
-        <p class="center-img" id="kek">
-          <img src="app.png" margin-left="50">
-        </p>
-      </div>
-  <div id="lol">
-  <div class="progress">
-    <div class="progress-bar progress-bar-success progress-bar-striped active"  role="progressbar" aria-valuenow="40"
-            aria-valuemin="0" aria-valuemax="100" style="width:65%">
-          65% Complete
-      </div>
-
-    </div>
-    <div class="container-fluid">
-  <h1>Reserve&Eat</h1>
-  <blockquote>
-    <p>This application is a project for a thesis, a student of <i>Krakow University of Economics (UEK)</i>. The application implements the functions of reserving a table in a cafe, when using technology <i>QRcode</i>. At the moment the project is at the implementation stage.</p>
-    <footer><i>Denis Kutsenko</i></footer>
-  </blockquote>
-    <a class="github-button" href="https://github.com/Den575/Android-aplikacja" data-size="large" aria-label="Follow @Den575 on GitHub">Follow @Denis575</a>
-</div>
-</div>
-  </div>
-  </div>
-
-
-
-</body>
-</html>
+wdwdwd
