--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <style>
   body {
       position: relative;
-      background-color: #FFB6C1;
+      background-color: #FFFFFF;
       
   }
 .den{
-  background-color: #FFB6C1
+  background-color: #FFFFFF
 }
 .g{
   background-color: #5DADE2;
@@ -26,17 +26,20 @@
   text-align: center;
   margin-top: 20px;
 }
-#lol{margin-left: 200px;
-      margin-right: 200px;}
+#lol{margin-left: 350px;
+      margin-right: 350px;}
 
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
+	<h1 style="text-align: center;">Reserve&Eat</h1>
   <div class="den">
       <div class="container-fluid">
 
         <p class="center-img" id="kek">
-          <img src="app.png" margin-left="50">
+          <img src="app1.png" margin-left="50">
+          <img src="app2.png" margin-left="50">
+
         </p>
       </div>
   <div id="lol">
@@ -48,7 +51,7 @@
 
     </div>
     <div class="container-fluid">
-  <h1>Reserve&Eat</h1>
+  <h3>Reserve&Eat</h3>
   <blockquote>
     <p>This application is a project for a thesis, a student of <i>Krakow University of Economics (UEK)</i>. The application implements the functions of reserving a table in a cafe, when using technology <i>QRcode</i>. At the moment the project is at the implementation stage.</p>
     <footer><i>Denis Kutsenko</i></footer>
