--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <style>
   body {
-      position: relative;
-      background-color: #FFFFFF;
-      
+  	background-color: #B1052C;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;    
+  }
+  .color{
+  	background-color: #FFFFFF;
   }
 .den{
   background-color: #FFFFFF
+  
 }
 .g{
-  background-color: #5DADE2;
+  background-color: #FFFFFF;
+
 }
 
 .center-img {
@@ -29,17 +37,27 @@
 #lol{margin-left: 350px;
       margin-right: 350px;}
 
+      .shadow {
+    box-shadow: 0 0 5px rgba(0,0,0,0.5); /* Параметры тени */
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+   }
+
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
-	<h1 style="text-align: center;">Reserve&Eat</h1>
-  <div class="den">
-      <div class="container-fluid">
+<div class="color">
+  <div class="shadow">
+  	<h1 style="text-align: center;">Reserve&Eat</h1>
+      <div class="container-fluid" >
 
         <p class="center-img" id="kek">
           <img src="app1.png" margin-left="50">
           <img src="app2.png" margin-left="50">
         </p>
+        <br>
       </div>
   <div id="lol">
   <div class="progress">
@@ -49,7 +67,7 @@
       </div>
 
     </div>
-    <div class="container-fluid">
+    <div>
   <h3>Reserve&Eat</h3>
   <blockquote>
     <p>This application is a project for a thesis, a student of <i>Krakow University of Economics (UEK)</i>. The application implements the functions of reserving a table in a cafe, when using technology <i>QRcode</i>. At the moment the project is at the implementation stage.</p>
@@ -58,12 +76,8 @@
     <a class="github-button" href="https://github.com/Den575/Android-aplikacja" data-size="large" aria-label="Follow @Den575 on GitHub">Follow @Denis575</a>
 </div>
 </div>
+<p style="opacity:0.3; text-align: center; font-size: 10px">Denis Kutsenko, UEK, Krakow</p>
   </div>
-  <br>
-  <br>
-  </div>
-
-
-
+</div>
 </body>
 </html>
