--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 <div class="color">
   <div class="shadow">
-  	<h1 style="text-align: center;">Reserve&Eat</h1>
+  	<h1 style="text-align: center;">Reserve<font style="color: #B1052C ">&</font>Eat</h1>
       <div class="container-fluid" >
 
         <p class="center-img" id="kek">
@@ -62,8 +62,8 @@
   <div id="lol">
   <div class="progress">
     <div class="progress-bar progress-bar-success progress-bar-striped active"  role="progressbar" aria-valuenow="40"
-            aria-valuemin="0" aria-valuemax="100" style="width:65%">
-          65% Complete
+            aria-valuemin="0" aria-valuemax="100" style="width:70%">
+          70% Complete
       </div>
 
     </div>
