--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
   </blockquote>
     <a class="github-button" href="https://github.com/Den575/Android-aplikacja" data-size="large" aria-label="Follow @Den575 on GitHub">Follow @Denis575</a>
 </div>
+<br>
+<h3>To reserve a table, use one of the QR-codes.</h3>
+<img src="Table_number_1_.png" width="153" height="190" alt="table #1">
+<img src="Table_number_2_.png" width="153" height="190" alt="table #2">
+<img src="Table_number_3_.png" width="153" height="190" alt="table #3">
+<img src="Table_number_4_.png" width="152" height="190" alt="table #4">
+<img src="Table_number_5_.png" width="152" height="190" alt="table #5">
 </div>
+<br>
 <p style="opacity:0.3; text-align: center; font-size: 10px">Denis Kutsenko, UEK, Krakow</p>
 
   </div>
