--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="progress-bars3 cid-rqbE4bCKiI" id="progress-bars3-4">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="progress-bars3 cid-rqbE4bCKiI" id="progress-bars3-4">
  
      
 
@@ -121,7 +121,7 @@
     <div class="container pt-5 mt-2">
         <div class=" countdown-cont align-center p-4">
             <div class="event-name align-left mbr-white ">
-                <h4 class="mbr-fonts-style display-5">НАЗВАНИЕ СОБЫТИЯ</h4>
+                <h4 class="mbr-fonts-style display-5"></h4>
             </div>
             <div class="countdown align-center py-2" data-due-date="2019/06/30">
             </div>
