--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="https://den575.github.io/">
                         <img src="assets/images/logo1-192x192.png" alt="Mobirise" title="">
                     </a>
                 </div>
