--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="progress-bars3 cid-rqbE4bCKiI" data-bg-video="https://www.youtube.com/watch?v=c2nOiOaVA3Y" id="progress-bars3-4">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="progress-bars3 cid-rqbE4bCKiI" data-bg-video="https://www.youtube.com/watch?v=c2nOiOaVA3Y" id="progress-bars3-4">
  
      
 
@@ -168,7 +168,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Sqq5XjQr/U6rEC/gPjyRKynSIKGeQWM7IYPGI4xfEz9vn8DwMFhSV66PJtvgEIRMBJNm6QGIYO8Q4jqYajOijak5h9llSKZTPMfeckvRXGUnKz9n3IBXXNeRyYRZcQ3Y">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uD8+Eaa0WinY2uKNZG4Q69GrLFSaqEtGrjT3Fgw/aZDkG1eOWxsSCWLC27BZWLedJtBk1BbmKiz+WcNK1cymWzE5ja5XTcIaMUOJmxtFKirFLqUPfg/DSyWWJLcRq0yW">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Dziękuję za wypewnienie formy!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -180,7 +180,7 @@
                             <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-9">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-9" class="form-control-label mbr-fonts-style display-7">Nazwisko</label>
+                            <label for="email-form1-9" class="form-control-label mbr-fonts-style display-7">E-mai</label>
                             <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-9">
                         </div>
                         
