--- a/SneepIt/index.html
+++ b/SneepIt/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/letters-1459347-960-720-124x124.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Home</title>
+  <title>Sneep it!</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
